# gnome-window-buttons

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
buttons/: Makefile.am  Makefile.in  WindowButtons.server.in.in  external.c  external.h  preferences.c  preferences.h  windowbuttons.c  windowbuttons.h  windowbuttons.schemas  windowbuttons.ui
buttons/pixmaps/: Makefile.am  Makefile.in
buttons/themes/: Makefile.am  Makefile.in
debian/: changelog  control  copyright  gnome-window-applets.postinst  links  postinst  rules
debian/patches/: 0001-default-to-ambiance-theme-and-layout.patch  series
title/: Makefile.am  Makefile.in  WindowTitle.server.in.in  preferences.c  windowtitle.c  windowtitle.h  windowtitle.schemas  windowtitle.ui
title/pixmaps/: Makefile.am  Makefile.in
windowbuttons/: Makefile.am  external.c  external.h  org.gnome.window-applets.windowbuttons.gschema.xml.in.in  preferences.c  theme.c  windowbuttons.c  windowbuttons.h  windowbuttons.ui
windowbuttons/pixmaps/: Makefile.in
windowtitle/: Makefile.am  Makefile.in  org.gnome.window-applets.windowtitle.gschema.xml.in.in  preferences.c  windowtitle.c  windowtitle.h  windowtitle.ui
