
EXTRA_DIST = \
	$(default_DATA)\
	$(themes_DATA) \
	$(default_DATA) \
	$(dust_DATA) \
	$(human_DATA) \
	$(human_thin_DATA) \
	$(dust_sand_DATA) \
	$(blaze_DATA) \
	$(blaze_color_DATA) \
	$(antique_DATA) \
	$(ambiance_DATA) \
	$(dust-invert_DATA) \
	$(dust_invert_DATA) \
	$(elementary_DATA)

default_DATA = \
	default/close-clicked.png\
	default/close-focused.png \
	default/close-hover.png \
	default/close-unfocused.png \
	default/maximize-clicked.png \
	default/maximize-focused.png \
	default/maximize-hover.png \
	default/maximize-unfocused.png \
	default/minimize-clicked.png \
	default/minimize-hover.png \
	default/minimize-focused.png \
	default/minimize-unfocused.png \
	default/unmaximize-clicked.png \
	default/unmaximize-focused.png \
	default/unmaximize-hover.png \
	default/unmaximize-unfocused.png

defaultdir = \
	${prefix}/share/windowbuttons/themes/default

dust_DATA = \
	dust/close-clicked.png\
	dust/close-focused.png \
	dust/close-hover.png \
	dust/close-unfocused.png \
	dust/maximize-clicked.png \
	dust/maximize-focused.png \
	dust/maximize-hover.png \
	dust/maximize-unfocused.png \
	dust/minimize-clicked.png \
	dust/minimize-focused.png \
	dust/minimize-hover.png \
	dust/minimize-unfocused.png \
	dust/unmaximize-clicked.png \
	dust/unmaximize-focused.png \
	dust/unmaximize-hover.png \
	dust/unmaximize-unfocused.png

dustdir = \
	${prefix}/share/windowbuttons/themes/dust

human_DATA = \
	human/close-clicked.png\
	human/close-focused.png \
	human/close-hover.png \
	human/close-unfocused.png \
	human/maximize-clicked.png \
	human/maximize-focused.png \
	human/maximize-hover.png \
	human/maximize-unfocused.png \
	human/minimize-clicked.png \
	human/minimize-focused.png \
	human/minimize-hover.png \
	human/minimize-unfocused.png \
	human/unmaximize-clicked.png \
	human/unmaximize-focused.png \
	human/unmaximize-hover.png \
	human/unmaximize-unfocused.png

humandir = \
	${prefix}/share/windowbuttons/themes/human

human_thin_DATA = \
	human-thin/close-clicked.png\
	human-thin/close-focused.png \
	human-thin/close-hover.png \
	human-thin/close-unfocused.png \
	human-thin/maximize-clicked.png \
	human-thin/maximize-focused.png \
	human-thin/maximize-hover.png \
	human-thin/maximize-unfocused.png \
	human-thin/minimize-clicked.png \
	human-thin/minimize-focused.png \
	human-thin/minimize-hover.png \
	human-thin/minimize-unfocused.png \
	human-thin/unmaximize-clicked.png \
	human-thin/unmaximize-focused.png \
	human-thin/unmaximize-hover.png \
	human-thin/unmaximize-unfocused.png

human_thindir = \
	${prefix}/share/windowbuttons/themes/human-thin

dust_sand_DATA = \
	dust-sand/close-clicked.png\
	dust-sand/close-focused.png \
	dust-sand/close-hover.png \
	dust-sand/close-unfocused.png \
	dust-sand/maximize-clicked.png \
	dust-sand/maximize-focused.png \
	dust-sand/maximize-hover.png \
	dust-sand/maximize-unfocused.png \
	dust-sand/minimize-clicked.png \
	dust-sand/minimize-focused.png \
	dust-sand/minimize-hover.png \
	dust-sand/minimize-unfocused.png \
	dust-sand/unmaximize-clicked.png \
	dust-sand/unmaximize-focused.png \
	dust-sand/unmaximize-hover.png \
	dust-sand/unmaximize-unfocused.png

dust_sanddir = \
	${prefix}/share/windowbuttons/themes/dust-sand

blaze_DATA = \
	blaze/close-clicked.png\
	blaze/close-focused.png \
	blaze/close-hover.png \
	blaze/close-unfocused.png \
	blaze/maximize-clicked.png \
	blaze/maximize-focused.png \
	blaze/maximize-hover.png \
	blaze/maximize-unfocused.png \
	blaze/minimize-clicked.png \
	blaze/minimize-focused.png \
	blaze/minimize-hover.png \
	blaze/minimize-unfocused.png \
	blaze/unmaximize-clicked.png \
	blaze/unmaximize-focused.png \
	blaze/unmaximize-hover.png \
	blaze/unmaximize-unfocused.png

blazedir = \
	${prefix}/share/windowbuttons/themes/blaze

blaze_color_DATA = \
	blaze-color/close-clicked.png\
	blaze-color/close-focused.png \
	blaze-color/close-hover.png \
	blaze-color/close-unfocused.png \
	blaze-color/maximize-clicked.png \
	blaze-color/maximize-focused.png \
	blaze-color/maximize-hover.png \
	blaze-color/maximize-unfocused.png \
	blaze-color/minimize-clicked.png \
	blaze-color/minimize-focused.png \
	blaze-color/minimize-hover.png \
	blaze-color/minimize-unfocused.png \
	blaze-color/unmaximize-clicked.png \
	blaze-color/unmaximize-focused.png \
	blaze-color/unmaximize-hover.png \
	blaze-color/unmaximize-unfocused.png

blaze_colordir = \
	${prefix}/share/windowbuttons/themes/blaze-color

antique_DATA = \
	antique/close-clicked.png\
	antique/close-focused.png \
	antique/close-hover.png \
	antique/close-unfocused.png \
	antique/maximize-clicked.png \
	antique/maximize-focused.png \
	antique/maximize-hover.png \
	antique/maximize-unfocused.png \
	antique/minimize-clicked.png \
	antique/minimize-focused.png \
	antique/minimize-hover.png \
	antique/minimize-unfocused.png \
	antique/unmaximize-clicked.png \
	antique/unmaximize-focused.png \
	antique/unmaximize-hover.png \
	antique/unmaximize-unfocused.png

antiquedir = \
	${prefix}/share/windowbuttons/themes/antique

ambiance_DATA = \
	ambiance/close-clicked.png\
	ambiance/close-focused.png \
	ambiance/close-hover.png \
	ambiance/close-unfocused.png \
	ambiance/maximize-clicked.png \
	ambiance/maximize-focused.png \
	ambiance/maximize-hover.png \
	ambiance/maximize-unfocused.png \
	ambiance/minimize-clicked.png \
	ambiance/minimize-focused.png \
	ambiance/minimize-hover.png \
	ambiance/minimize-unfocused.png \
	ambiance/unmaximize-clicked.png \
	ambiance/unmaximize-focused.png \
	ambiance/unmaximize-hover.png \
	ambiance/unmaximize-unfocused.png

ambiancedir = \
	${prefix}/share/windowbuttons/themes/ambiance

dust_invert_DATA = \
	dust-invert/close-clicked.png\
	dust-invert/close-focused.png \
	dust-invert/close-hover.png \
	dust-invert/close-unfocused.png \
	dust-invert/maximize-clicked.png \
	dust-invert/maximize-focused.png \
	dust-invert/maximize-hover.png \
	dust-invert/maximize-unfocused.png \
	dust-invert/minimize-clicked.png \
	dust-invert/minimize-focused.png \
	dust-invert/minimize-hover.png \
	dust-invert/minimize-unfocused.png \
	dust-invert/unmaximize-clicked.png \
	dust-invert/unmaximize-focused.png \
	dust-invert/unmaximize-hover.png \
	dust-invert/unmaximize-unfocused.png

dust_invertdir = \
	${prefix}/share/windowbuttons/themes/dust-invert

elementary_DATA = \
	elementary/close-clicked.png\
	elementary/close-focused.png \
	elementary/close-hover.png \
	elementary/close-unfocused.png \
	elementary/maximize-clicked.png \
	elementary/maximize-focused.png \
	elementary/maximize-hover.png \
	elementary/maximize-unfocused.png \
	elementary/minimize-clicked.png \
	elementary/minimize-focused.png \
	elementary/minimize-hover.png \
	elementary/minimize-unfocused.png \
	elementary/README \
	elementary/unmaximize-clicked.png \
	elementary/unmaximize-focused.png \
	elementary/unmaximize-hover.png \
	elementary/unmaximize-unfocused.png

elementarydir = \
	${prefix}/share/windowbuttons/themes/elementary

## File created by the gnome-build tools

