
EXTRA_DIST = \
	$(default_DATA)\
	$(themes_DATA) \
	$(default_DATA) \
	$(dust_DATA) \
	$(human_DATA) \
	$(human_thin_DATA) \
	$(dust_sand_DATA) \
	$(blaze_DATA) \
	$(blaze_color_DATA) \
	$(antique_DATA) \
	$(ambiance_DATA) \
	$(dust_invert_DATA) \
	$(elementary_DATA) \
	$(radiance_DATA) \
	$(WoW_DATA) \
	$(ambiance_x_studio_DATA) \
	$(sorbet_DATA) \
	$(ambiance_maverick_DATA) \
	$(radiance_maverick_DATA) \
	$(equinox_glass_DATA) \
	$(plano_DATA) \
	$(new_hope_DATA) \
	$(blubuntu_DATA)

default_DATA = \
	default/close-focused-normal.png \
	default/close-focused-clicked.png\
	default/close-focused-hover.png \
	default/close-unfocused-normal.png \
	default/close-unfocused-clicked.png \
	default/close-unfocused-hover.png \
	default/maximize-focused-normal.png \
	default/maximize-focused-clicked.png \
	default/maximize-focused-hover.png \
	default/maximize-unfocused-normal.png \
	default/maximize-unfocused-clicked.png \
	default/maximize-unfocused-hover.png \
	default/minimize-focused-normal.png \
	default/minimize-focused-clicked.png \
	default/minimize-focused-hover.png \
	default/minimize-unfocused-normal.png \
	default/minimize-unfocused-clicked.png \
	default/minimize-unfocused-hover.png \
	default/unmaximize-focused-normal.png \
	default/unmaximize-focused-clicked.png \
	default/unmaximize-focused-hover.png \
	default/unmaximize-unfocused-normal.png \
	default/unmaximize-unfocused-clicked.png \
	default/unmaximize-unfocused-hover.png

defaultdir = \
	${prefix}/share/windowbuttons/themes/default

dust_DATA = \
	dust/close-clicked.png\
	dust/close-focused.png \
	dust/close-hover.png \
	dust/close-unfocused.png \
	dust/maximize-clicked.png \
	dust/maximize-focused.png \
	dust/maximize-hover.png \
	dust/maximize-unfocused.png \
	dust/minimize-clicked.png \
	dust/minimize-focused.png \
	dust/minimize-hover.png \
	dust/minimize-unfocused.png \
	dust/unmaximize-clicked.png \
	dust/unmaximize-focused.png \
	dust/unmaximize-hover.png \
	dust/unmaximize-unfocused.png

dustdir = \
	${prefix}/share/windowbuttons/themes/dust

human_DATA = \
	human/close-clicked.png\
	human/close-focused.png \
	human/close-hover.png \
	human/close-unfocused.png \
	human/maximize-clicked.png \
	human/maximize-focused.png \
	human/maximize-hover.png \
	human/maximize-unfocused.png \
	human/minimize-clicked.png \
	human/minimize-focused.png \
	human/minimize-hover.png \
	human/minimize-unfocused.png \
	human/unmaximize-clicked.png \
	human/unmaximize-focused.png \
	human/unmaximize-hover.png \
	human/unmaximize-unfocused.png

humandir = \
	${prefix}/share/windowbuttons/themes/human

human_thin_DATA = \
	human-thin/close-clicked.png\
	human-thin/close-focused.png \
	human-thin/close-hover.png \
	human-thin/close-unfocused.png \
	human-thin/maximize-clicked.png \
	human-thin/maximize-focused.png \
	human-thin/maximize-hover.png \
	human-thin/maximize-unfocused.png \
	human-thin/minimize-clicked.png \
	human-thin/minimize-focused.png \
	human-thin/minimize-hover.png \
	human-thin/minimize-unfocused.png \
	human-thin/unmaximize-clicked.png \
	human-thin/unmaximize-focused.png \
	human-thin/unmaximize-hover.png \
	human-thin/unmaximize-unfocused.png

human_thindir = \
	${prefix}/share/windowbuttons/themes/human-thin

dust_sand_DATA = \
	dust-sand/close-clicked.png\
	dust-sand/close-focused.png \
	dust-sand/close-hover.png \
	dust-sand/close-unfocused.png \
	dust-sand/maximize-clicked.png \
	dust-sand/maximize-focused.png \
	dust-sand/maximize-hover.png \
	dust-sand/maximize-unfocused.png \
	dust-sand/minimize-clicked.png \
	dust-sand/minimize-focused.png \
	dust-sand/minimize-hover.png \
	dust-sand/minimize-unfocused.png \
	dust-sand/unmaximize-clicked.png \
	dust-sand/unmaximize-focused.png \
	dust-sand/unmaximize-hover.png \
	dust-sand/unmaximize-unfocused.png

dust_sanddir = \
	${prefix}/share/windowbuttons/themes/dust-sand

blaze_DATA = \
	blaze/close-clicked.png\
	blaze/close-focused.png \
	blaze/close-hover.png \
	blaze/close-unfocused.png \
	blaze/maximize-clicked.png \
	blaze/maximize-focused.png \
	blaze/maximize-hover.png \
	blaze/maximize-unfocused.png \
	blaze/minimize-clicked.png \
	blaze/minimize-focused.png \
	blaze/minimize-hover.png \
	blaze/minimize-unfocused.png \
	blaze/unmaximize-clicked.png \
	blaze/unmaximize-focused.png \
	blaze/unmaximize-hover.png \
	blaze/unmaximize-unfocused.png

blazedir = \
	${prefix}/share/windowbuttons/themes/blaze

blaze_color_DATA = \
	blaze-color/close-clicked.png\
	blaze-color/close-focused.png \
	blaze-color/close-hover.png \
	blaze-color/close-unfocused.png \
	blaze-color/maximize-clicked.png \
	blaze-color/maximize-focused.png \
	blaze-color/maximize-hover.png \
	blaze-color/maximize-unfocused.png \
	blaze-color/minimize-clicked.png \
	blaze-color/minimize-focused.png \
	blaze-color/minimize-hover.png \
	blaze-color/minimize-unfocused.png \
	blaze-color/unmaximize-clicked.png \
	blaze-color/unmaximize-focused.png \
	blaze-color/unmaximize-hover.png \
	blaze-color/unmaximize-unfocused.png

blaze_colordir = \
	${prefix}/share/windowbuttons/themes/blaze-color

antique_DATA = \
	antique/close-clicked.png\
	antique/close-focused.png \
	antique/close-hover.png \
	antique/close-unfocused.png \
	antique/maximize-clicked.png \
	antique/maximize-focused.png \
	antique/maximize-hover.png \
	antique/maximize-unfocused.png \
	antique/minimize-clicked.png \
	antique/minimize-focused.png \
	antique/minimize-hover.png \
	antique/minimize-unfocused.png \
	antique/unmaximize-clicked.png \
	antique/unmaximize-focused.png \
	antique/unmaximize-hover.png \
	antique/unmaximize-unfocused.png

antiquedir = \
	${prefix}/share/windowbuttons/themes/antique

ambiance_DATA = \
	ambiance/close-clicked.png\
	ambiance/close-focused.png \
	ambiance/close-hover.png \
	ambiance/close-unfocused.png \
	ambiance/maximize-clicked.png \
	ambiance/maximize-focused.png \
	ambiance/maximize-hover.png \
	ambiance/maximize-unfocused.png \
	ambiance/minimize-clicked.png \
	ambiance/minimize-focused.png \
	ambiance/minimize-hover.png \
	ambiance/minimize-unfocused.png \
	ambiance/unmaximize-clicked.png \
	ambiance/unmaximize-focused.png \
	ambiance/unmaximize-hover.png \
	ambiance/unmaximize-unfocused.png

ambiancedir = \
	${prefix}/share/windowbuttons/themes/ambiance

dust_invert_DATA = \
	dust-invert/close-clicked.png\
	dust-invert/close-focused.png \
	dust-invert/close-hover.png \
	dust-invert/close-unfocused.png \
	dust-invert/maximize-clicked.png \
	dust-invert/maximize-focused.png \
	dust-invert/maximize-hover.png \
	dust-invert/maximize-unfocused.png \
	dust-invert/minimize-clicked.png \
	dust-invert/minimize-focused.png \
	dust-invert/minimize-hover.png \
	dust-invert/minimize-unfocused.png \
	dust-invert/unmaximize-clicked.png \
	dust-invert/unmaximize-focused.png \
	dust-invert/unmaximize-hover.png \
	dust-invert/unmaximize-unfocused.png

dust_invertdir = \
	${prefix}/share/windowbuttons/themes/dust-invert

elementary_DATA = \
	elementary/close-clicked.png\
	elementary/close-focused.png \
	elementary/close-hover.png \
	elementary/close-unfocused.png \
	elementary/maximize-clicked.png \
	elementary/maximize-focused.png \
	elementary/maximize-hover.png \
	elementary/maximize-unfocused.png \
	elementary/minimize-clicked.png \
	elementary/minimize-focused.png \
	elementary/minimize-hover.png \
	elementary/minimize-unfocused.png \
	elementary/README \
	elementary/unmaximize-clicked.png \
	elementary/unmaximize-focused.png \
	elementary/unmaximize-hover.png \
	elementary/unmaximize-unfocused.png

elementarydir = \
	${prefix}/share/windowbuttons/themes/elementary

radiance_DATA = \
	radiance/unmaximize-hover.png\
	radiance/unmaximize-clicked.png \
	radiance/minimize-hover.png \
	radiance/minimize-clicked.png \
	radiance/maximize-hover.png \
	radiance/maximize-clicked.png \
	radiance/close-hover.png \
	radiance/close-clicked.png \
	radiance/unmaximize-unfocused.png \
	radiance/unmaximize-focused.png \
	radiance/minimize-unfocused.png \
	radiance/minimize-focused.png \
	radiance/maximize-unfocused.png \
	radiance/maximize-focused.png \
	radiance/close-unfocused.png \
	radiance/close-focused.png

radiancedir = \
	${prefix}/share/windowbuttons/themes/radiance

WoW_DATA = \
	WoW/minimize-hover.png\
	WoW/minimize-unfocused.png \
	WoW/maximize-unfocused.png \
	WoW/unmaximize-unfocused.png \
	WoW/close-unfocused.png \
	WoW/minimize-clicked.png \
	WoW/unmaximize-clicked.png \
	WoW/maximize-clicked.png \
	WoW/close-clicked.png \
	WoW/maximize-hover.png \
	WoW/unmaximize-hover.png \
	WoW/minimize-focused.png \
	WoW/unmaximize-focused.png \
	WoW/maximize-focused.png \
	WoW/close-focused.png \
	WoW/close-hover.png

WoWdir = \
	${prefix}/share/windowbuttons/themes/WoW

ambiance_x_studio_DATA = \
	ambiance-x-studio/close-clicked.png\
	ambiance-x-studio/close-focused.png\
	ambiance-x-studio/close-hover.png \
	ambiance-x-studio/close-unfocused.png \
	ambiance-x-studio/maximize-clicked.png \
	ambiance-x-studio/maximize-focused.png \
	ambiance-x-studio/maximize-hover.png \
	ambiance-x-studio/maximize-unfocused.png \
	ambiance-x-studio/minimize-clicked.png \
	ambiance-x-studio/minimize-focused.png \
	ambiance-x-studio/minimize-hover.png \
	ambiance-x-studio/minimize-unfocused.png \
	ambiance-x-studio/unmaximize-clicked.png \
	ambiance-x-studio/unmaximize-focused.png \
	ambiance-x-studio/unmaximize-hover.png \
	ambiance-x-studio/unmaximize-unfocused.png

ambiance_x_studiodir = \
	${prefix}/share/windowbuttons/themes/ambiance-x-studio

sorbet_DATA = \
	sorbet/close-clicked.png\
	sorbet/close-focused.png \
	sorbet/close-hover.png \
	sorbet/close-unfocused.png \
	sorbet/maximize-clicked.png \
	sorbet/maximize-focused.png \
	sorbet/maximize-hover.png \
	sorbet/maximize-unfocused.png \
	sorbet/minimize-clicked.png \
	sorbet/minimize-focused.png \
	sorbet/minimize-hover.png \
	sorbet/minimize-unfocused.png \
	sorbet/unmaximize-clicked.png \
	sorbet/unmaximize-focused.png \
	sorbet/unmaximize-hover.png \
	sorbet/unmaximize-unfocused.png

sorbetdir = \
	${prefix}/share/windowbuttons/themes/sorbet

ambiance_maverick_DATA = \
	ambiance-maverick/bg.png          \
	ambiance-maverick/close-unfocused-hover.png          \
	ambiance-maverick/unmaximize-unfocused-hover.png          \
	ambiance-maverick/unmaximize-focused-hover.png          \
	ambiance-maverick/unmaximize-unfocused-clicked.png          \
	ambiance-maverick/unmaximize-focused-clicked.png          \
	ambiance-maverick/minimize-focused-hover.png          \
	ambiance-maverick/minimize-unfocused-hover.png          \
	ambiance-maverick/minimize-unfocused-clicked.png          \
	ambiance-maverick/minimize-focused-clicked.png          \
	ambiance-maverick/maximize-focused-hover.png          \
	ambiance-maverick/maximize-unfocused-hover.png          \
	ambiance-maverick/maximize-unfocused-clicked.png          \
	ambiance-maverick/maximize-focused-clicked.png          \
	ambiance-maverick/close-focused-hover.png          \
	ambiance-maverick/close-unfocused-clicked.png          \
	ambiance-maverick/close-focused-clicked.png          \
	ambiance-maverick/unmaximize-focused-normal.png          \
	ambiance-maverick/unmaximize-unfocused-normal.png          \
	ambiance-maverick/close-focused-normal.png          \
	ambiance-maverick/minimize-unfocused-normal.png          \
	ambiance-maverick/minimize-focused-normal.png          \
	ambiance-maverick/close-unfocused-normal.png          \
	ambiance-maverick/maximize-unfocused-normal.png          \
	ambiance-maverick/maximize-focused-normal.png

ambiance_maverickdir = \
	${prefix}/share/windowbuttons/themes/ambiance-maverick

radiance_maverick_DATA = \
	radiance-maverick/close-unfocused-hover.png\
	radiance-maverick/close-unfocused-clicked.png \
	radiance-maverick/unmaximize-focused-hover.png \
	radiance-maverick/close-focused-clicked.png \
	radiance-maverick/minimize-focused-hover.png \
	radiance-maverick/unmaximize-focused-clicked.png \
	radiance-maverick/close-focused-normal.png \
	radiance-maverick/unmaximize-unfocused-normal.png \
	radiance-maverick/minimize-focused-normal.png \
	radiance-maverick/maximize-focused-hover.png \
	radiance-maverick/minimize-focused-clicked.png \
	radiance-maverick/maximize-focused-normal.png \
	radiance-maverick/unmaximize-focused-normal.png \
	radiance-maverick/maximize-unfocused-normal.png \
	radiance-maverick/maximize-unfocused-clicked.png \
	radiance-maverick/maximize-unfocused-hover.png \
	radiance-maverick/minimize-unfocused-clicked.png \
	radiance-maverick/minimize-unfocused-hover.png \
	radiance-maverick/unmaximize-unfocused-clicked.png \
	radiance-maverick/unmaximize-unfocused-hover.png \
	radiance-maverick/maximize-focused-clicked.png \
	radiance-maverick/close-focused-hover.png \
	radiance-maverick/close-unfocused-normal.png \
	radiance-maverick/minimize-unfocused-normal.png

radiance_maverickdir = \
	${prefix}/share/windowbuttons/themes/radiance-maverick

equinox_glass_DATA = \
	equinox-glass/README      \
	equinox-glass/unmaximize-unfocused.png      \
	equinox-glass/unmaximize-hover.png      \
	equinox-glass/unmaximize-focused.png      \
	equinox-glass/unmaximize-clicked.png      \
	equinox-glass/minimize-unfocused.png      \
	equinox-glass/minimize-hover.png      \
	equinox-glass/minimize-focused.png      \
	equinox-glass/minimize-clicked.png      \
	equinox-glass/maximize-unfocused.png      \
	equinox-glass/maximize-hover.png      \
	equinox-glass/maximize-focused.png      \
	equinox-glass/maximize-clicked.png      \
	equinox-glass/close-unfocused.png      \
	equinox-glass/close-hover.png      \
	equinox-glass/close-focused.png      \
	equinox-glass/close-clicked.png

equinox_glassdir = \
	${prefix}/share/windowbuttons/themes/equinox-glass

plano_DATA = \
	plano/minimize-unfocused.png\
	plano/close-unfocused.png \
	plano/maximize-unfocused.png \
	plano/unmaximize-unfocused.png \
	plano/close-clicked.png \
	plano/minimize-clicked.png \
	plano/minimize-hover.png \
	plano/unmaximize-clicked.png \
	plano/maximize-clicked.png \
	plano/maximize-hover.png \
	plano/unmaximize-hover.png \
	plano/close-hover.png \
	plano/minimize-focused.png \
	plano/unmaximize-focused.png \
	plano/maximize-focused.png \
	plano/close-focused.png

planodir = \
	${prefix}/share/windowbuttons/themes/plano

new_hope_DATA = \
	new-hope/minimize-focused.png\
	new-hope/minimize-unfocused.png \
	new-hope/minimize-clicked.png \
	new-hope/minimize-hover.png \
	new-hope/unmaximize-focused.png \
	new-hope/maximize-focused.png \
	new-hope/maximize-clicked.png \
	new-hope/unmaximize-clicked.png \
	new-hope/maximize-unfocused.png \
	new-hope/unmaximize-unfocused.png \
	new-hope/unmaximize-hover.png \
	new-hope/maximize-hover.png \
	new-hope/close-clicked.png \
	new-hope/close-unfocused.png \
	new-hope/close-focused.png \
	new-hope/close-hover.png

new_hopedir = \
	${prefix}/share/windowbuttons/themes/new-hope

blubuntu_DATA = \
	blubuntu/minimize-hover.png\
	blubuntu/close-hover.png \
	blubuntu/close-unfocused.png \
	blubuntu/maximize-clicked.png \
	blubuntu/maximize-focused.png \
	blubuntu/maximize-unfocused.png \
	blubuntu/maximize-hover.png \
	blubuntu/minimize-clicked.png \
	blubuntu/minimize-unfocused.png \
	blubuntu/unmaximize-clicked.png \
	blubuntu/unmaximize-focused.png \
	blubuntu/unmaximize-hover.png \
	blubuntu/unmaximize-unfocused.png \
	blubuntu/close-clicked.png \
	blubuntu/minimize-focused.png \
	blubuntu/close-focused.png

blubuntudir = \
	${prefix}/share/windowbuttons/themes/blubuntu

## File created by the gnome-build tools

